# yajl

./: .gitignore  .travis.yml  BUILDING  BUILDING.md  BUILDING.win32  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README  README.md  TODO  YAJLDoc.cmake  autogen.sh  configure  configure.ac  git-version-gen  index.html  n.sh  yajl.spec
MSVS/: TODO
contrib/: hfuzz.sh
debian/: README.source  changelog  control  copyright  json_reformat.1  json_verify.1  libyajl-dev.install  libyajl-dev.install.in  libyajl-doc.dirs  libyajl-doc.doc-base  libyajl-doc.install  libyajl2.install.in  rules  watch  yajl-tools.manpages
doc/: CMakeLists.txt  YAJL.dxy
dp.SyntaxHighlighter/: shBrushCpp.js
example/: CMakeLists.txt  README.md  decl_example.c  gen_example.c  parse_config.c  twitter_public_timeline.json
include/: yajl
perf/: CMakeLists.txt  documents.c  perftest.c
pkgconfig/: yajl-uninstalled.pc.in  yajl.pc.in
reformatter/: CMakeLists.txt  json_reformat.c
src/: CMakeLists.txt  Makefile.am  YAJL.dxy  YajlConfig.cmake.in  yajl  yajl.c  yajl.pc.cmake  yajl_alloc.c  yajl_alloc.h  yajl_buf.c  yajl_buf.h  yajl_bytestack.h  yajl_decl.c  yajl_encode.c  yajl_encode.h  yajl_gen.c  yajl_lex.c  yajl_lex.h  yajl_parser.c  yajl_parser.h  yajl_rev_buf.c  yajl_rev_buf.h  yajl_rev_lex.c  yajl_rev_lex.h  yajl_rev_parser.c  yajl_rev_parser.h  yajl_tree.c  yajl_tree_path.c  yajl_version.c
src/api/: yajl_common.h  yajl_decl.h  yajl_gen.h  yajl_parse.h  yajl_tree.h  yajl_tree_path.h  yajlpp.h
src/yajl/: yajl_version.h.in
test/: CMakeLists.txt  run_decl_tests.sh  run_tests.sh  run_tests.sh.in  string_encode_test.c  yajl_decl_test.c  yajl_test.c
test/api/: CMakeLists.txt  run_tests.sh  run_tests.sh.in
test/cases/: array.json.gold  array_close.json.gold  array_open.json.gold  bogus_char.json.gold  codepoints_from_unicode_org.json.gold  dc_simple_with_comments.json.gold  deep_arrays.json.gold  difficult_json_c_test_case_with_comments.json.gold  doubles.json.gold  empty_array.json.gold  escaped_bulgarian.json.gold  escaped_foobar.json.gold  false.json.gold  integers.json  integers.json.gold  invalid_utf8.json.gold  isolated_surrogate_marker.json.gold  leading_zero_in_number.json.gold  lonely_minus_sign.json.gold  lonely_number.json.gold  map_open.json.gold  missing_integer_after_decimal_point.json.gold  missing_integer_after_exponent.json.gold  multiple.json.gold  non_utf8_char_in_string.json.gold  nulls_and_bools.json.gold  simple.json.gold  string_invalid_escape.json.gold  string_invalid_hex_char.json.gold  string_with_escapes.json.gold  string_with_invalid_newline.json.gold  true_then_garbage.json.gold  unescaped_bulgarian.json.gold  us_string.json  us_string.json.gold
test/parsing/: CMakeLists.txt  reverse.sh  run_rev_tests.sh  run_tests.sh  string_encode_test.c  yajl_rev_test.c  yajl_test.c
test/parsing/cases/: a5_codepoints_from_hex.json  a5_codepoints_from_hex.json.gold  a5_doubles.json  a5_doubles.json.gold  a5_integers.json  a5_integers.json.gold  a5_invalid_hex_char.json  a5_invalid_hex_char.json.gold  a5_map_identifiers.json  a5_map_identifiers.json.gold  a5_spec_example.json.gold  a5_strings.json  a5_strings.json.gold  a5_trailing_commas.json  a5_trailing_commas.json.gold  bignums.json  bignums.json.gold  hex.json  hex.json.gold  leading_zero_in_number.json.gold  lonely_minus_sign.json.gold  low_overflow.json  low_overflow_regression.json  minus_infinity.json.gold  string_invalid_escape.json
test/parsing/rev_cases/: ac_difficult_json_c_test_case_with_comments.json  ac_difficult_json_c_test_case_with_comments.json.gold  ac_simple_with_comments.json  ac_simple_with_comments.json.gold  ag_null_then_garbage.json  ag_true_then_garbage.json  am_eof.json  am_eof.json.gold  am_integers.json  am_integers.json.gold  am_multiple.json  am_multiple.json.gold  am_stuff.json  am_stuff.json.gold  ap_array_open.json.gold  ap_eof_str.json  ap_map_open.json.gold  ap_partial_ok.json.gold  array.json  array.json.gold  bignums.json  bignums.json.gold  bogus_char.json  bogus_char.json.gold  deep_arrays.json.gold  difficult_json_c_test_case.json  difficult_json_c_test_case.json.gold  doubles.json  doubles.json.gold  doubles_in_array.json  doubles_in_array.json.gold  empty_array.json.gold  escaped_bulgarian.json  escaped_bulgarian.json.gold  fg_false_then_garbage.json  fg_false_then_garbage.json.gold  fg_issue_7.json  fg_issue_7.json.gold  fg_null_then_garbage.json.gold  fg_true_then_garbage.json  (+35 more)
test/yajlpp/: CMakeLists.txt  const-char.cpp  parser.cpp  parser_error.cpp  run_tests.sh  tokens.cpp  user-defined.cpp
verify/: CMakeLists.txt  json_verify.c
yajl-1.0.1/: annotated.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  structyajl__alloc__funcs.html  structyajl__callbacks.html  structyajl__gen__config.html  structyajl__parser__config.html  yajl.html  yajl__common_8h-source.html  yajl__common_8h.html  yajl__gen_8h-source.html  yajl__gen_8h.html  yajl__parse_8h-source.html  yajl__parse_8h.html
yajl-1.0.11/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  structyajl__alloc__funcs.html  structyajl__callbacks.html  structyajl__gen__config.html  structyajl__parser__config.html  yajl.html  yajl__common_8h.html  yajl__common_8h_source.html  yajl__gen_8h.html  yajl__gen_8h_source.html  yajl__parse_8h.html  yajl__parse_8h_source.html
yajl-1.0.12/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  structyajl__alloc__funcs.html  structyajl__callbacks.html  structyajl__gen__config.html  structyajl__parser__config.html  yajl.html  yajl__common_8h.html  yajl__common_8h_source.html  yajl__gen_8h.html  yajl__gen_8h_source.html  yajl__parse_8h.html  yajl__parse_8h_source.html
(+238 files in other folders)
