FIND_PACKAGE(Doxygen)
INCLUDE(CMakeDependentOption)

# Options
CMAKE_DEPENDENT_OPTION(GENERATE_DOCUMENTATION "Generate the user documentation using doxygen" 
    ON "DOXYGEN_FOUND"
    OFF)

IF(GENERATE_DOCUMENTATION)
  # Doxygen target setup
  SET(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
  set(DOXYGEN_HTML_OUTPUT_DIR html)
  set(DOXYGEN_CONFIGURED_INPUT ${CMAKE_CURRENT_BINARY_DIR}/YAJL.dxy)
  configure_file(YAJL.dxy ${DOXYGEN_CONFIGURED_INPUT} @ONLY)

  add_custom_target(doc ALL
    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIGURED_INPUT}
    COMMENT "User documentation generation"
    SOURCES YAJL.dxy
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

  install(DIRECTORY ${DOXYGEN_OUTPUT_DIR}/${DOXYGEN_HTML_OUTPUT_DIR}/ DESTINATION ./doc)
endif()
